--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="FitManager - Proyecto de seguimiento de actividad y bienestar.">
   <meta name="author" content="Kevin Turizo">
-  <title>SmartFit | Proyecto</title>
+  <title>FitManager | Proyecto</title>
 </head>
 
 
@@ -194,3 +194,4 @@
   </footer>
 </body>
 </html>
+
